[Mac] Switch from NSObject categories to forward declarations for Touch Bar support.

This fixes a crash when -[BridgedContentView touchBar:] calls
-[NSGroupTouchBarItem groupItemWithIdentifier:items:], because
NSGroupTouchBarItem was typedef'd to NSObject.

BUG=666893

Review-Url: https://codereview.chromium.org/2519563002
Cr-Commit-Position: refs/heads/master@{#433558}