ui/views/cocoa/bridged_content_view_touch_bar.mm
@@ -49,7 +49,8 @@ NSString* const kTouchBarCancelId = @"com.google.chrome-CANCEL";
 // NSTouchBarDelegate protocol implementation.
 
 - (NSTouchBarItem*)touchBar:(NSTouchBar*)touchBar
-      makeItemForIdentifier:(NSTouchBarItemIdentifier)identifier {
+      makeItemForIdentifier:(NSTouchBarItemIdentifier)identifier
+    NS_AVAILABLE_MAC(10_12_1) {
   if (!hostedView_)
     return nil;
 
@@ -62,7 +63,9 @@ NSString* const kTouchBarCancelId = @"com.google.chrome-CANCEL";
     }
     if ([items count] == 0)
       return nil;
-    return [NSGroupTouchBarItem groupItemWithIdentifier:identifier items:items];
+    return [NSClassFromString(@"NSGroupTouchBarItem")
+        groupItemWithIdentifier:identifier
+                          items:items];
   }
 
   ui::DialogButton type = ui::DIALOG_BUTTON_NONE;
@@ -102,7 +105,7 @@ NSString* const kTouchBarCancelId = @"com.google.chrome-CANCEL";
 
 // NSTouchBarProvider protocol implementation (via NSResponder category).
 
-- (NSTouchBar*)makeTouchBar {
+- (NSTouchBar*)makeTouchBar NS_AVAILABLE_MAC(10_12_1) {
   if (!hostedView_)
     return nil;
 
